# weaviate-rust-client

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
examples/basic_example/: Cargo.toml
examples/basic_example/src/: main.rs
src/: lib.rs  prelude.rs
src/command/: meta.rs  misc.rs  mod.rs  schema.rs
src/command/graphql/: getter.rs  mod.rs
src/connection/: auth.rs  http.rs  mod.rs
src/graphql/: getter.rs  mod.rs
src/utils/: db_version.rs  mod.rs  string.rs
tests/common/: docker-compose.yml  mod.rs
