[package]
name = "weaviate-client"
version = "0.1.0"
description = "Official client library to interact with Weaviate"
repository = "https://github.com/weaviate/weaviate-rust-client"
license-file = "LICENSE"
authors = ["Parker Duckworth <parkerduckworth@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
derive-new = "0.5.9"
graphql_client = "0.12.0"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["native-tls", "serde_json", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]

mockito = "1.0.2"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
